# rust-discord-counter

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20231102113145_init_database.sql
src/: main.rs
src/commands/: addcount.rs  mod.rs  showcount.rs  updateitem.rs
