[package]
name = "rust-discord-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serenity = {version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
sqlx = {version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls"]}
tokio = {version = "1.33.0", features = ["rt", "macros"]}
